--- a/initiation.css
+++ b/initiation.css
@@ -10,6 +10,7 @@ body {
   align-self: center;
   flex-direction: column;
 }
+
 .textbox {
   width: 100%;
   height: 90%;
@@ -66,6 +67,15 @@ height: 30px;
 background: #FFFFFF;
 font-size: 16px;
 }
+h1 {
+  font-family: Saira;
+  font-style: normal;
+  font-weight: black;
+  line-height: normal;
+  font-size: 24px;
+  color: #000000;
+  margin: 12px 0;
+}
 p {
   font-family: Saira;
   font-style: normal;
@@ -79,6 +89,15 @@ p {
 p2 {
   font-family: Saira;
   font-weight: bold;
+  line-height: normal;
+  font-size: 18px;
+  text-align: center;
+  color: #000000;
+  margin: 0;
+}
+p3 {
+  font-family: Saira;
+  font-weight: regular;
   line-height: normal;
   font-size: 18px;
   text-align: center;
@@ -246,4 +265,51 @@ button:hover p {
   animation-timing-function: ease-in-out;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
+}
+
+.info {
+    width: 51%;
+    margin: 0 auto;
+}
+form {
+  margin-top: 30px;
+}
+input[type=text] {
+  width: 400px;
+  height: 40px;
+  padding: 0 10px;
+  margin: 0 0 20px 20px;
+  background: #FFFFFF;
+  border: 3px solid #000000;
+  box-sizing: border-box;
+}
+input[type=text]:hover {
+  background: #000;
+  color: #fff;
+}
+input[type=submit] {
+  background: #FFFFFF;
+  border: 3px solid #000000;
+  box-sizing: border-box;
+  border-radius: 14px;
+  width: auto;
+  height: 40px;
+  padding: 0 20px;
+  margin-top: 30px;
+  margin-right: 10px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+
+  font-family: Saira;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 18px;
+  text-align: center;
+  color: #000000;
+  margin: 0;
+}
+input[type=submit]:hover {
+  background-color: #000;
+  color: #fff;
 }
