--- a/initiation.css
+++ b/initiation.css
@@ -10,54 +10,13 @@ body {
   align-self: center;
   flex-direction: column;
 }
-
-.textbox {
-  width: 100%;
-  height: 90%;
-  overflow: scroll;
-  background: #FFFFFF;
-  border: 2px solid #000000;
-  box-sizing: border-box;
-  margin: 20%;
-}
-.textbox-header {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  background: #fff;
-  height: 30px;
-  padding: 5px 6px 0 6px;
-  border-bottom: 2px solid #000000;
-}
-.textbox-content {
-  margin: 50px 40px 40px 40px;
-  overflow: hidden;
+.info {
+  width: 45%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  align-self: center;
   align-items: center;
-}
-.textbox-content h1 {
-  font-family: Saira;
-  font-style: normal;
-  font-weight: black;
-  line-height: normal;
-  font-size: 24px;
-  color: #000000;
-  margin: 12px 0;
-}
-.textbox-content p, li {
-  font-family: Saira;
-  font-weight: regular;
-  line-height: normal;
-  font-size: 18px;
-  text-align: left;
-  color: #000000;
-  margin: 0;
-}
-svg {
-  width: 100%;
-  height: 40px;
-  display: inline;
 }
 .title {
 display: flex;
@@ -74,7 +33,7 @@ h1 {
   line-height: normal;
   font-size: 24px;
   color: #000000;
-  margin: 12px 0;
+  margin: 0;
 }
 p {
   font-family: Saira;
@@ -84,8 +43,11 @@ p {
   font-size: 24px;
   text-align: center;
   color: #000000;
-  margin: 0;
+  margin-bottom: 20px;
 }
+/* p + p, p + form, textbox-content p {
+  margin: 0 0 20px 0;
+} */
 p2 {
   font-family: Saira;
   font-weight: bold;
@@ -95,17 +57,27 @@ p2 {
   color: #000000;
   margin: 0;
 }
-p3 {
-  font-family: Saira;
-  font-weight: regular;
-  line-height: normal;
+.p3 {
+  font-weight: normal;
   font-size: 18px;
-  text-align: center;
-  color: #000000;
-  margin: 0;
+  text-align: left;
 }
 a {
+  background:
+     linear-gradient(
+       to bottom, var(#000000) 0%,
+       var(#000000) 100%
+     );
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 4px 4px;
+  color: #000;
   text-decoration: none;
+  transition: background-size .2s;
+}
+
+a:hover {
+  background-size: 4px 50px;
 }
 button {
   background: #FFFFFF;
@@ -123,6 +95,9 @@ button {
 }
 button:hover {
   background-color: #000;
+}
+button p {
+  margin: 0;
 }
 button:hover p {
   color: #fff;
@@ -267,25 +242,26 @@ button:hover p {
   animation-iteration-count: 1;
 }
 
-.info {
-    width: 51%;
-    margin: 0 auto;
-}
-form {
-  margin-top: 30px;
-}
 input[type=text] {
   width: 400px;
   height: 40px;
   padding: 0 10px;
-  margin: 0 0 20px 20px;
   background: #FFFFFF;
   border: 3px solid #000000;
   box-sizing: border-box;
 }
-input[type=text]:hover {
-  background: #000;
-  color: #fff;
+form p2 {
+  margin-right: 20px;
+}
+input {
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  font-family: Saira;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 18px;
+  color: #000000;
+  margin: 20px 0 0 0;
 }
 input[type=submit] {
   background: #FFFFFF;
@@ -295,21 +271,60 @@ input[type=submit] {
   width: auto;
   height: 40px;
   padding: 0 20px;
-  margin-top: 30px;
-  margin-right: 10px;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
   cursor: pointer;
-
-  font-family: Saira;
-  font-weight: bold;
-  line-height: normal;
-  font-size: 18px;
-  text-align: center;
-  color: #000000;
-  margin: 0;
 }
 input[type=submit]:hover {
-  background-color: #000;
+  background: #000;
   color: #fff;
+}
+input[type=submit] + input[type=submit] {
+  margin-right: 10px;
+}
+
+.textbox {
+  width: 100%;
+  height: 90%;
+  overflow: scroll;
+  background: #FFFFFF;
+  border: 2px solid #000000;
+  box-sizing: border-box;
+  margin: 0 20%;
+}
+.textbox-header {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  background: #fff;
+  height: 30px;
+  padding: 5px 6px 0 6px;
+  border-bottom: 2px solid #000000;
+}
+.textbox-content {
+  margin: 50px 40px 40px 40px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.textbox-content h1 {
+  font-family: Saira;
+  font-style: normal;
+  font-weight: black;
+  line-height: normal;
+  font-size: 24px;
+  color: #000000;
+  margin: 12px 0;
+}
+.textbox-content p, li {
+  font-family: Saira;
+  font-weight: normal;
+  line-height: normal;
+  font-size: 18px;
+  text-align: left;
+  color: #000000;
+}
+svg {
+  width: 100%;
+  height: 40px;
+  display: inline;
 }
