hides ugly focus effect

--- a/initiation.css
+++ b/initiation.css
@@ -85,6 +85,9 @@ input[type=text] {
   border: 3px solid #000000;
   box-sizing: border-box;
 }
+input[type=text]:hover, input[type=text]:focus, input[type=text]:active {
+  outline: none;
+}
 input[type=submit] {
   background: #FFFFFF;
   border: 3px solid #000000;
@@ -95,9 +98,10 @@ input[type=submit] {
   padding: 0 20px;
   cursor: pointer;
 }
-input[type=submit]:hover {
+input[type=submit]:hover, input[type=submit]:focus {
   background: #000;
   color: #fff;
+  outline: none;
 }
 input[type=submit] + input[type=submit] {
   margin-right: 10px;
